--- a/NotikaEmail_Identity/Views/_ViewImports.cshtml
+++ b/NotikaEmail_Identity/Views/_ViewImports.cshtml
@@ -1,3 +1,10 @@
 ﻿@using NotikaEmail_Identity
 @using NotikaEmail_Identity.Models
+@using NotikaEmail_Identity.DTOs.CategoryDtos
+@using NotikaEmail_Identity.DTOs.MessageDtos
+
+
+
+
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
