--- a/NotikaEmail_Identity/Views/Default/ReceiverViewEmail.cshtml
+++ b/NotikaEmail_Identity/Views/Default/ReceiverViewEmail.cshtml
@@ -46,7 +46,7 @@
                     </div>
                     <div class="mail-ads mail-vw-ph">
                         <p class="first-ph"><b>Konu: </b>@Model.Subject</p>
-                        <p><b>Email:</b> <a href="#">@Model.Sender.Email</a></p>
+                        <p><b>Email Adresiniz size ait:</b> <a href="#">@Model.Sender.Email</a></p>
                         <p class="last-ph"><b>Date:</b> 15.03.2018</p>
                     </div>
                     <div class="view-mail-atn">
