--- a/NotikaEmail_Identity/Views/Default/ViewEmail.cshtml
+++ b/NotikaEmail_Identity/Views/Default/ViewEmail.cshtml
@@ -46,6 +46,7 @@
                     </div>
                     <div class="mail-ads mail-vw-ph">
                         <p class="first-ph"><b>Konu: </b>@Model.Subject</p>
+                        <p class="first-ph"><b>Kategori: </b>@Model.Category.Name</p>
                         <p class="first-ph"><b>Telefon: </b>@Model.Sender.PhoneNumber</p>
                         <p class="first-ph"><b>şehir: </b>@Model.Sender.City</p>
                         <p><b>Email:</b> <a href="#">@Model.Sender.Email</a></p>
