--- a/NotikaEmail_Identity/Views/Shared/Components/_MessageMenuSidebarComponentPartial/Default.cshtml
+++ b/NotikaEmail_Identity/Views/Shared/Components/_MessageMenuSidebarComponentPartial/Default.cshtml
@@ -12,12 +12,13 @@
 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
     <div class="inbox-left-sd">
         <div class="compose-ml">
-            <a class="btn" href="#">Yeni Mesaj Oluştur</a>
+            <a class="btn" href="/Default/SendMessage">Yeni Mesaj Oluştur</a>
         </div>
         <div class="inbox-status">
             <ul class="inbox-st-nav inbox-ft">
                 <li><a href="/Default/Inbox"><i class="notika-icon notika-mail"></i>Gelen Kutusu<span class="pull-right">12</span></a></li>
                 <li><a href="/Default/SendBox"><i class="notika-icon notika-sent"></i> Giden Kutusu</a></li>
+                <li><a href="#"><i class="notika-icon notika-draft"></i> Arşivlerim</a></li>
                 <li><a href="#"><i class="notika-icon notika-draft"></i> Taslaklarım</a></li>
                 <li><a href="#"><i class="notika-icon notika-trash"></i> Çöp Kutusu</a></li>
             </ul>
