--- a/NotikaEmail_Identity/Views/_ViewImports.cshtml
+++ b/NotikaEmail_Identity/Views/_ViewImports.cshtml
@@ -2,6 +2,7 @@
 @using NotikaEmail_Identity.Models
 @using NotikaEmail_Identity.DTOs.CategoryDtos
 @using NotikaEmail_Identity.DTOs.MessageDtos
+@using NotikaEmail_Identity.DTOs.UserDtos
 
 
 
