--- a/NotikaEmail_Identity/Views/Profile/UpdateProfil.cshtml
+++ b/NotikaEmail_Identity/Views/Profile/UpdateProfil.cshtml
@@ -86,22 +86,13 @@
         <main class="flex-1 w-full max-w-[1280px] mx-auto px-4 sm:px-6 lg:px-8 py-8">
             <nav class="mb-8 border-b border-primary/20 dark:border-primary/10">
                 <div class="flex gap-8 overflow-x-auto">
-                    <a class="group flex items-center justify-center border-b-2 border-transparent pb-4 pt-2 px-1 hover:border-primary/30 transition-all" href="#">
-                        <span class="material-symbols-outlined mr-2 text-slate-400 group-hover:text-primary transition-colors">home</span>
-                        <span class="text-slate-500 dark:text-slate-400 font-medium text-sm group-hover:text-primary transition-colors">Ana Sayfa</span>
-                    </a>
-                    <a class="group flex items-center justify-center border-b-2 border-transparent pb-4 pt-2 px-1 hover:border-primary/30 transition-all" href="#">
-                        <span class="material-symbols-outlined mr-2 text-slate-400 group-hover:text-primary transition-colors">mail</span>
-                        <span class="text-slate-500 dark:text-slate-400 font-medium text-sm group-hover:text-primary transition-colors">Email</span>
-                    </a>
-                    <a class="flex items-center justify-center border-b-2 border-primary pb-4 pt-2 px-1" href="#">
+                  
+                   
+                    <a class="flex items-center justify-center border-b-2 border-primary pb-4 pt-2 px-1" href="/Profile/Index">
                         <span class="material-symbols-outlined mr-2 text-primary">person</span>
                         <span class="text-primary font-bold text-sm">Profil</span>
                     </a>
-                    <a class="group flex items-center justify-center border-b-2 border-transparent pb-4 pt-2 px-1 hover:border-primary/30 transition-all" href="#">
-                        <span class="material-symbols-outlined mr-2 text-slate-400 group-hover:text-primary transition-colors">settings</span>
-                        <span class="text-slate-500 dark:text-slate-400 font-medium text-sm group-hover:text-primary transition-colors">Ayarlar</span>
-                    </a>
+                   
                 </div>
             </nav>
             <div class="grid grid-cols-1 lg:grid-cols-12 gap-8 items-start">
