--- a/NotikaEmail_Identity/Views/Shared/Components/_NavbarComponentPartial/Default.cshtml
+++ b/NotikaEmail_Identity/Views/Shared/Components/_NavbarComponentPartial/Default.cshtml
@@ -20,7 +20,7 @@
                         <a data-toggle="tab" href="#Charts"><i class="notika-icon notika-bar-chart"></i> Ayarlar</a>
                     </li>
                     <li>
-                        <a data-toggle="tab" href="#Tables"><i class="notika-icon notika-windows"></i> Kullanıcılar</a>
+                        <a data-toggle="tab" href="#Tables"><i class="notika-icon notika-windows"></i> Mail Gönderdiklerim</a>
                     </li>
                     
                 </ul>
@@ -36,7 +36,10 @@
                     <div id="mailbox" class="tab-pane active notika-tab-menu-bg animated flipInX">
                         <ul class="notika-main-menu-dropdown">
                             <li>
-                                <a href="inbox.html">Inbox</a>
+                                <a href="/Default/Inbox">Gelen Emaillerim</a>
+                            </li>
+                            <li>
+                                <a href="/Default/SendBox">Giden Emaillerim</a>
                             </li>
                             
                         </ul>
@@ -44,7 +47,7 @@
                     <div id="Interface" class="tab-pane notika-tab-menu-bg animated flipInX">
                         <ul class="notika-main-menu-dropdown">
                             <li>
-                                <a href="animations.html">Animations</a>
+                                <a href="/Profile/Index">Profil Sayfam</a>
                             </li>
                            
                         </ul>
