--- a/NotikaEmail_Identity/Views/Shared/Components/_HeaderComponentPartial/Default.cshtml
+++ b/NotikaEmail_Identity/Views/Shared/Components/_HeaderComponentPartial/Default.cshtml
@@ -1,8 +1,18 @@
-﻿
+﻿@model List<ResultMessageDto>
+
 @*
     header component view
 *@
 
+<style>
+    /* Sadece mesajlardaki profil fotoğraflarının düzgün ve yuvarlak görünmesi için ufak ayar */
+    .hd-message-img img {
+        width: 40px !important;
+        height: 40px !important;
+        object-fit: cover !important;
+        border-radius: 50% !important;
+    }
+</style>
 
 <div class="header-top-area">
     <div class="container">
@@ -15,6 +25,7 @@
             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                 <div class="header-top-menu">
                     <ul class="nav navbar-nav notika-top-nav">
+
                         <li class="nav-item dropdown">
                             <a href="#" data-toggle="dropdown" role="button" aria-expanded="false" class="nav-link dropdown-toggle"><span><i class="notika-icon notika-search"></i></span></a>
                             <div role="menu" class="dropdown-menu search-dd animated flipInX">
@@ -24,144 +35,61 @@
                                 </div>
                             </div>
                         </li>
+
                         <li class="nav-item dropdown">
-                            <a href="#" data-toggle="dropdown" role="button" aria-expanded="false" class="nav-link dropdown-toggle"><span><i class="notika-icon notika-mail"></i></span></a>
+                            <a href="#" data-toggle="dropdown" role="button" aria-expanded="false" class="nav-link dropdown-toggle">
+                                <span><i class="notika-icon notika-mail"></i></span>
+                                @if (Model != null && Model.Count > 0)
+                                {
+                                    <div class="spinner4 spinner-4"></div>
+                                    <div class="ntd-ctn"><span>@Model.Count</span></div>
+                                }
+                            </a>
                             <div role="menu" class="dropdown-menu message-dd animated zoomIn">
                                 <div class="hd-mg-tt">
-                                    <h2>Messages</h2>
+                                    <h2>Okunmayan Son Mesajlarım</h2>
                                 </div>
+
                                 <div class="hd-message-info">
-                                    <a href="#">
-                                        <div class="hd-message-sn">
-                                            <div class="hd-message-img">
-                                                <img src="~/notika-master/notika/green-horizotal/img/post/1.jpg" alt="" />
-                                            </div>
-                                            <div class="hd-mg-ctn">
-                                                <h3>David Belle</h3>
-                                                <p>Cum sociis natoque penatibus et magnis dis parturient montes</p>
-                                            </div>
+                                    @if (Model != null && Model.Count > 0)
+                                    {
+                                        @foreach (var message in Model)
+                                        {
+                                            <a href="/Default/ViewEmail/@message.Id">
+                                                <div class="hd-message-sn">
+                                                    <div class="hd-message-img">
+                                                        <img src="@message.Sender.ImageUrl" alt="" />
+                                                    </div>
+                                                    <div class="hd-mg-ctn">
+                                                        <h3>@message.Sender.Name @message.Sender.Surname</h3>
+                                                        <p>@message.Subject</p>
+                                                    </div>
+                                                </div>
+                                            </a>
+                                        }
+                                    }
+                                    else
+                                    {
+                                        <div style="text-align: center; padding: 30px 20px;">
+                                            <i class="notika-icon notika-mail" style="font-size: 30px; color: #ccc; margin-bottom: 10px; display: inline-block;"></i>
+                                            <h3 style="font-size: 14px; margin: 0; color: #333;">Harika!</h3>
+                                            <p style="margin: 5px 0 0 0; color: #777; font-size: 13px;">Tüm mesajlarınızı okudunuz.</p>
                                         </div>
-                                    </a>
-                                    <a href="#">
-                                        <div class="hd-message-sn">
-                                            <div class="hd-message-img">
-                                                <img src="~/notika-master/notika/green-horizotal/img/post/2.jpg" alt="" />
-                                            </div>
-                                            <div class="hd-mg-ctn">
-                                                <h3>Jonathan Morris</h3>
-                                                <p>Cum sociis natoque penatibus et magnis dis parturient montes</p>
-                                            </div>
-                                        </div>
-                                    </a>
-                                    <a href="#">
-                                        <div class="hd-message-sn">
-                                            <div class="hd-message-img">
-                                                <img src="~/notika-master/notika/green-horizotal/img/post/4.jpg" alt="" />
-                                            </div>
-                                            <div class="hd-mg-ctn">
-                                                <h3>Fredric Mitchell</h3>
-                                                <p>Cum sociis natoque penatibus et magnis dis parturient montes</p>
-                                            </div>
-                                        </div>
-                                    </a>
-                                    <a href="#">
-                                        <div class="hd-message-sn">
-                                            <div class="hd-message-img">
-                                                <img src="~/notika-master/notika/green-horizotal/img/post/1.jpg" alt="" />
-                                            </div>
-                                            <div class="hd-mg-ctn">
-                                                <h3>David Belle</h3>
-                                                <p>Cum sociis natoque penatibus et magnis dis parturient montes</p>
-                                            </div>
-                                        </div>
-                                    </a>
-                                    <a href="#">
-                                        <div class="hd-message-sn">
-                                            <div class="hd-message-img">
-                                                <img src="~/notika-master/notika/green-horizotal/img/post/2.jpg" alt="" />
-                                            </div>
-                                            <div class="hd-mg-ctn">
-                                                <h3>Glenn Jecobs</h3>
-                                                <p>Cum sociis natoque penatibus et magnis dis parturient montes</p>
-                                            </div>
-                                        </div>
-                                    </a>
+                                    }
                                 </div>
                                 <div class="hd-mg-va">
-                                    <a href="#">View All</a>
+                                    <a href="/Default/Inbox">Tümünü İncele</a>
                                 </div>
                             </div>
                         </li>
-                        <li class="nav-item nc-al">
-                            <a href="#" data-toggle="dropdown" role="button" aria-expanded="false" class="nav-link dropdown-toggle"><span><i class="notika-icon notika-alarm"></i></span><div class="spinner4 spinner-4"></div><div class="ntd-ctn"><span>3</span></div></a>
-                            <div role="menu" class="dropdown-menu message-dd notification-dd animated zoomIn">
-                                <div class="hd-mg-tt">
-                                    <h2>Notification</h2>
-                                </div>
-                                <div class="hd-message-info">
-                                    <a href="#">
-                                        <div class="hd-message-sn">
-                                            <div class="hd-message-img">
-                                                <img src="~/notika-master/notika/green-horizotal/img/post/1.jpg" alt="" />
-                                            </div>
-                                            <div class="hd-mg-ctn">
-                                                <h3>David Belle</h3>
-                                                <p>Cum sociis natoque penatibus et magnis dis parturient montes</p>
-                                            </div>
-                                        </div>
-                                    </a>
-                                    <a href="#">
-                                        <div class="hd-message-sn">
-                                            <div class="hd-message-img">
-                                                <img src="~/notika-master/notika/green-horizotal/img/post/2.jpg" alt="" />
-                                            </div>
-                                            <div class="hd-mg-ctn">
-                                                <h3>Jonathan Morris</h3>
-                                                <p>Cum sociis natoque penatibus et magnis dis parturient montes</p>
-                                            </div>
-                                        </div>
-                                    </a>
-                                    <a href="#">
-                                        <div class="hd-message-sn">
-                                            <div class="hd-message-img">
-                                                <img src="~/notika-master/notika/green-horizotal/img/post/4.jpg" alt="" />
-                                            </div>
-                                            <div class="hd-mg-ctn">
-                                                <h3>Fredric Mitchell</h3>
-                                                <p>Cum sociis natoque penatibus et magnis dis parturient montes</p>
-                                            </div>
-                                        </div>
-                                    </a>
-                                    <a href="#">
-                                        <div class="hd-message-sn">
-                                            <div class="hd-message-img">
-                                                <img src="~/notika-master/notika/green-horizotal/img/post/1.jpg" alt="" />
-                                            </div>
-                                            <div class="hd-mg-ctn">
-                                                <h3>David Belle</h3>
-                                                <p>Cum sociis natoque penatibus et magnis dis parturient montes</p>
-                                            </div>
-                                        </div>
-                                    </a>
-                                    <a href="#">
-                                        <div class="hd-message-sn">
-                                            <div class="hd-message-img">
-                                                <img src="~/notika-master/notika/green-horizotal/img/post/2.jpg" alt="" />
-                                            </div>
-                                            <div class="hd-mg-ctn">
-                                                <h3>Glenn Jecobs</h3>
-                                                <p>Cum sociis natoque penatibus et magnis dis parturient montes</p>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                                <div class="hd-mg-va">
-                                    <a href="#">View All</a>
-                                </div>
-                            </div>
-                        </li>
+
                         <li class="nav-item">
-                            <a href="#" data-toggle="dropdown" role="button" aria-expanded="false" class="nav-link dropdown-toggle"><span><i class="notika-icon notika-menus"></i></span><div class="spinner4 spinner-4"></div><div class="ntd-ctn"><span>2</span></div></a>
+                            <a href="#" data-toggle="dropdown" role="button" aria-expanded="false" class="nav-link dropdown-toggle">
+                                <span><i class="notika-icon notika-menus"></i></span>
+                                <div class="spinner4 spinner-4"></div>
+                                <div class="ntd-ctn"><span>@ViewBag.messageCount</span></div>
+                            </a>
+
                             <div role="menu" class="dropdown-menu message-dd task-dd animated zoomIn">
                                 <div class="hd-mg-tt">
                                     <h2>Tasks</h2>
