--- a/NotikaEmail_Identity/Views/Register/SignUp.cshtml
+++ b/NotikaEmail_Identity/Views/Register/SignUp.cshtml
@@ -80,7 +80,7 @@
                     <div class="w-10 h-10 rounded-full bg-cover bg-center border-2 border-primary" data-alt="Takım elbiseli gülümseyen adam portresi" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuAVazUVOHD4M-c3358gOay-u8YiiVez-WIsxuKJU1KedC-8WF9dGuKVclJoD4fn-4brekEUXSEh6cuLyq_DNmVijFWWKlTl2SzeoJN1D8Fn5ACzO-v70FurAoor2AoBZGyqEeA3CWkNvmuF1HUknXtufOCmqkIWt7CchEX0PWBMECJN4jS7KjLi0BLPhH6BNTC3QEq5InsqSxSgCuo2TK1OouptG2ZYBUBoLTX8b6l4iB0pTKbVGhRSjR4kXKIJ_h1BKTSqsJ6zt_uG');"></div>
                     <div>
                         <p class="text-white font-semibold text-sm">Burak Han Ulusoy</p>
-                        <p class="text-primary text-xs">Öğrenci, M&Y Academy</p>
+                        <p class="text-primary text-xs">Founder Of NotikaApp</p>
                     </div>
                 </div>
             </div>
