Google login integration has been added.  19:54  27.02.2026

--- a/NotikaEmail_Identity/Views/Login/SignIn.cshtml
+++ b/NotikaEmail_Identity/Views/Login/SignIn.cshtml
@@ -165,7 +165,7 @@
                         </div>
                     </div>
                     <div class="grid grid-cols-2 gap-4 mt-6">
-                        <a class="flex w-full items-center justify-center gap-3 rounded-lg bg-white dark:bg-surface-dark px-3 py-2.5 text-sm font-semibold text-slate-900 dark:text-slate-200 shadow-sm ring-1 ring-inset ring-slate-300 dark:ring-slate-700 hover:bg-slate-50 dark:hover:bg-slate-700 transition-colors focus-visible:ring-transparent" href="#">
+                        <a class="flex w-full items-center justify-center gap-3 rounded-lg bg-white dark:bg-surface-dark px-3 py-2.5 text-sm font-semibold text-slate-900 dark:text-slate-200 shadow-sm ring-1 ring-inset ring-slate-300 dark:ring-slate-700 hover:bg-slate-50 dark:hover:bg-slate-700 transition-colors focus-visible:ring-transparent" href="/Login/GoogleLogin">
                             <svg aria-hidden="true" class="h-5 w-5" viewbox="0 0 24 24">
                                 <path d="M12.0003 20.45c-4.6667 0-8.4503-3.7836-8.4503-8.4503C3.55 7.333 7.3336 3.55 12.0003 3.55c2.115 0 4.0536.726 5.5869 1.9363l-2.0986 2.0987c-1.002-.67-2.2137-1.07-3.4883-1.07-3.3134 0-6 2.6866-6 6 0 3.3134 2.6866 6 6 6 2.7683 0 5.0933-1.8584 5.8117-4.4084h-5.8117v-3h8.805c.105.5184.1584 1.0567.1584 1.6134 0 5.0683-3.6667 8.73-8.5634 8.73z" fill="currentColor"></path>
                             </svg>
