--- a/NotikaEmail_Identity/Views/Register/SignUp.cshtml
+++ b/NotikaEmail_Identity/Views/Register/SignUp.cshtml
@@ -169,10 +169,10 @@
                         </div>
                     </div>
                     <div class="grid grid-cols-2 gap-4">
-                        <button class="flex items-center justify-center gap-3 w-full h-12 rounded-lg border border-slate-200 dark:border-slate-700 hover:bg-slate-50 dark:hover:bg-slate-800 transition-colors bg-white dark:bg-slate-900 text-slate-700 dark:text-slate-200 font-medium text-sm">
+                        <a href="/Login/GoogleLogin" class="flex items-center justify-center gap-3 w-full h-12 rounded-lg border border-slate-200 dark:border-slate-700 hover:bg-slate-50 dark:hover:bg-slate-800 transition-colors bg-white dark:bg-slate-900 text-slate-700 dark:text-slate-200 font-medium text-sm">
                             <img alt="Google Logosu" class="w-5 h-5" src="https://upload.wikimedia.org/wikipedia/commons/c/c1/Google_%22G%22_logo.svg" />
                             Google
-                        </button>
+                        </a>
                         <button class="flex items-center justify-center gap-3 w-full h-12 rounded-lg border border-slate-200 dark:border-slate-700 hover:bg-slate-50 dark:hover:bg-slate-800 transition-colors bg-white dark:bg-slate-900 text-slate-700 dark:text-slate-200 font-medium text-sm">
                             <img alt="GitHub Logosu" class="w-5 h-5 dark:invert" src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" />
                             GitHub
